# 2022-rusty-game-jam-2

./: Cargo.toml  README.md
.cargo/: config
.github/workflows/: main.yml  release.yml
assets-source/levels/: level_zero.blend  level_zero_alt.blend
assets/gltf/levels/: level_zero.gltf  level_zero_alt.gltf
notes/: todo.txt
src/: level_plugin.rs  lib.rs  main.rs  ui_inspector.rs  ui_plugin.rs
src/ui_plugin/: ui_title_menu.rs
